--- a/src/app/components/template/header/header.component.css
+++ b/src/app/components/template/header/header.component.css
@@ -1,7 +1,7 @@
 .header {
     display: flex;
     align-items: center;
-    background-color: blueviolet;
+    background-color: transparent;
 }
 
 .header a {
